[gd_scene load_steps=15 format=3 uid="uid://dgksxgii5cvm1"]

[ext_resource type="Script" uid="uid://bg5scjc5opek7" path="res://scenes/board/level/auction_card.gd" id="1_nohtn"]
[ext_resource type="Texture2D" uid="uid://bvcee3bxw6k8t" path="res://scenes/board/level/textures/Field37.png" id="1_w4qa4"]
[ext_resource type="StyleBox" uid="uid://cw1nso01ashun" path="res://scenes/board/level/auction_card.tres" id="2_nohtn"]
[ext_resource type="StyleBox" uid="uid://rm2lw3gykiti" path="res://scenes/board/level/auction_card_red_button.tres" id="4_nd7ms"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwpm3"]
bg_color = Color(1, 0.258824, 0.627451, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="SystemFont" id="SystemFont_0djl5"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_44jpk"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.101961, 0.788235, 0.243137, 1)
border_width_bottom = 6
border_color = Color(0.0659443, 0.21984, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="Theme" id="Theme_vfdh1"]
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 20
Button/fonts/font = SubResource("SystemFont_0djl5")
Button/styles/hover = ExtResource("2_nohtn")
Button/styles/normal = SubResource("StyleBoxFlat_44jpk")

[sub_resource type="SystemFont" id="SystemFont_ah1dp"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nd7ms"]
bg_color = Color(0.546299, 0.000497684, 0.000272709, 1)
border_width_bottom = 4
border_color = Color(0.242256, 9.36188e-05, 5.13014e-05, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="Theme" id="Theme_rqw81"]
Button/font_sizes/font_size = 20
Button/fonts/font = SubResource("SystemFont_ah1dp")
Button/styles/hover = SubResource("StyleBoxFlat_nd7ms")
Button/styles/normal = ExtResource("4_nd7ms")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qaclj"]
bg_color = Color(0, 0.682353, 0.713726, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0fgb"]
bg_color = Color(0.886275, 0.47451, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dc1gs"]
bg_color = Color(0, 0.713726, 0.411765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="AuctionCard" type="CanvasLayer"]
script = ExtResource("1_nohtn")

[node name="Blur" type="ColorRect" parent="."]
modulate = Color(0.301961, 0.301961, 0.301961, 0.627451)
self_modulate = Color(0.277528, 0.277528, 0.277528, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.5
offset_top = -138.0
offset_right = 178.5
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("1_w4qa4")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 15
text = "Aktualna kwota:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 15
text = "Następna kwota:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextCost" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
text = "Lider licytacji:"

[node name="lidername" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="AuctionTimeLeft" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
vertical_alignment = 1

[node name="players" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.95
offset_left = -54.0
offset_top = -24.0
offset_right = 54.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="player1" type="MarginContainer" parent="players"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Panel" type="Panel" parent="players/player1"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xwpm3")

[node name="VBoxContainer" type="VBoxContainer" parent="players/player1/Panel"]
layout_mode = 2
offset_left = -5.0
offset_top = 2.0
offset_right = 169.0
offset_bottom = 80.0
alignment = 1

[node name="player1_nickname" type="Label" parent="players/player1/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 20
text = "JACEK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="players/player1/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 15
alignment = 1

[node name="BuyButton" type="Button" parent="players/player1/Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = SubResource("Theme_vfdh1")
text = "LICYTUJ"

[node name="AuctionButton" type="Button" parent="players/player1/Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
theme = SubResource("Theme_rqw81")
text = "PASS
"

[node name="player2" type="MarginContainer" parent="players"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Panel" type="Panel" parent="players/player2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qaclj")

[node name="VBoxContainer" type="VBoxContainer" parent="players/player2/Panel"]
layout_mode = 2
offset_left = -5.0
offset_top = 2.0
offset_right = 168.0
offset_bottom = 82.0
alignment = 1

[node name="player2_nickname" type="Label" parent="players/player2/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 20
text = "KUBA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="players/player2/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 15
alignment = 1

[node name="BuyButton" type="Button" parent="players/player2/Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = SubResource("Theme_vfdh1")
text = "LICYTUJ"

[node name="AuctionButton" type="Button" parent="players/player2/Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
theme = SubResource("Theme_rqw81")
text = "PASS
"

[node name="player3" type="MarginContainer" parent="players"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Panel" type="Panel" parent="players/player3"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c0fgb")

[node name="VBoxContainer" type="VBoxContainer" parent="players/player3/Panel"]
layout_mode = 2
offset_left = -5.0
offset_top = 2.0
offset_right = 166.0
offset_bottom = 80.0
alignment = 1

[node name="player3_nickname" type="Label" parent="players/player3/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 20
text = "ŁUKASZ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="players/player3/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 15
alignment = 1

[node name="BuyButton" type="Button" parent="players/player3/Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = SubResource("Theme_vfdh1")
text = "LICYTUJ"

[node name="AuctionButton" type="Button" parent="players/player3/Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
theme = SubResource("Theme_rqw81")
text = "PASS
"

[node name="player4" type="MarginContainer" parent="players"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Panel" type="Panel" parent="players/player4"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dc1gs")

[node name="VBoxContainer" type="VBoxContainer" parent="players/player4/Panel"]
layout_mode = 2
offset_left = -5.0
offset_top = 2.0
offset_right = 181.0
offset_bottom = 80.0
alignment = 1

[node name="player4_nickname" type="Label" parent="players/player4/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 20
text = "DAWID"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="players/player4/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 15
alignment = 1

[node name="BuyButton" type="Button" parent="players/player4/Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = SubResource("Theme_vfdh1")
text = "LICYTUJ"

[node name="AuctionButton" type="Button" parent="players/player4/Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
theme = SubResource("Theme_rqw81")
text = "PASS
"

[node name="AuctionTime" type="Timer" parent="."]

[connection signal="pressed" from="players/player1/Panel/VBoxContainer/Buttons/BuyButton" to="." method="on_player1_bid_button_pressed"]
[connection signal="pressed" from="players/player1/Panel/VBoxContainer/Buttons/AuctionButton" to="." method="on_player1_pass_button_pressed"]
[connection signal="pressed" from="players/player2/Panel/VBoxContainer/Buttons/BuyButton" to="." method="on_player2_bid_button_pressed"]
[connection signal="pressed" from="players/player2/Panel/VBoxContainer/Buttons/AuctionButton" to="." method="on_player2_pass_button_pressed"]
[connection signal="pressed" from="players/player3/Panel/VBoxContainer/Buttons/BuyButton" to="." method="on_player3_bid_button_pressed"]
[connection signal="pressed" from="players/player3/Panel/VBoxContainer/Buttons/AuctionButton" to="." method="on_player3_pass_button_pressed"]
[connection signal="pressed" from="players/player4/Panel/VBoxContainer/Buttons/BuyButton" to="." method="on_player4_bid_button_pressed"]
[connection signal="pressed" from="players/player4/Panel/VBoxContainer/Buttons/AuctionButton" to="." method="on_player4_pass_button_pressed"]
[connection signal="timeout" from="AuctionTime" to="." method="on_auction_time_timeout"]
